<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.WeatherFragment">

    <ImageView
        android:layout_width="414dp"
        android:layout_height="259dp"
        android:background="@drawable/sky" />

    <androidx.cardview.widget.CardView
        android:layout_width="412dp"
        android:layout_height="465dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="40dp">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday_19_may_4_30pm"
            android:textSize="19sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bishkek_kr"
            android:layout_marginTop="19dp"
            android:layout_marginStart="269dp"
            android:textSize="25sp"/>

        <ImageView
            android:id="@+id/im_cloud"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/vector"
            android:layout_marginTop="60dp"
            android:layout_marginStart="35dp"/>

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunny"
            android:layout_marginStart="30dp"
            android:layout_marginTop="110dp"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginStart="45dp"
            android:src="@drawable/water" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_49"
            android:textSize="20sp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="199dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/timer"
            android:layout_marginStart="50dp"
            android:layout_marginTop="260dp"/>

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_03_am"
            android:textSize="20sp"
            android:layout_marginTop="289dp"
            android:layout_marginStart="40dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sun"
            android:layout_marginStart="55dp"
            android:layout_marginTop="341dp"/>

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man_21"
            android:textSize="20sp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="377dp"/>

        <TextView
            android:id="@+id/degrees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_33"
            android:textSize="40sp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="140dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/degree"
            android:layout_marginStart="240dp"
            android:layout_marginTop="60dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/speed"
            android:layout_marginTop="160dp"
            android:layout_marginStart="179dp"/>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="200dp"
            android:text="@string/_1_007mbar"
            android:textSize="15sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="260dp"
            android:src="@drawable/thorns" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_05pm"
            android:layout_marginTop="289dp"
            android:layout_marginStart="165dp"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/photo"
            android:layout_marginTop="341dp"
            android:layout_marginStart="190dp" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue_22"
            android:textSize="20sp"
            android:layout_marginTop="377dp"
            android:layout_marginStart="170dp" />

        <TextView
            android:id="@+id/max_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_35_c"
            android:layout_marginStart="310dp"
            android:layout_marginTop="60dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/min_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_27_c"
            android:layout_marginTop="90dp"
            android:layout_marginStart="310dp"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wind"
            android:layout_marginStart="330dp"
            android:layout_marginTop="169dp"/>

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_34km_h"
            android:textSize="20sp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="310dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time"
            android:layout_marginTop="265dp"
            android:layout_marginStart="331dp"/>

        <TextView
            android:id="@+id/daytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13h_1m"
            android:textSize="20sp"
            android:layout_marginStart="310dp"
            android:layout_marginTop="300dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wave"
            android:layout_marginTop="360dp"
            android:layout_marginStart="320dp"/>

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed_22"
            android:layout_marginStart="313dp"
            android:layout_marginTop="390dp"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>